--- a/src/containers/chat/chat.css
+++ b/src/containers/chat/chat.css
@@ -1,7 +1,7 @@
 .chat-page {
   display: flex;
   flex-direction: column;
-  max-width: 360px;
+  width: 360px;
 }
 
 .chat-page__input {
@@ -40,6 +40,16 @@
   display: flex;
   flex-direction: column;
   margin-top: 8px;
+}
+
+.chat__name {
+ margin: 0 9px;
+}
+
+.chat__text {
+  border: 1px solid black;
+  border-radius: 12px;
+  padding: 3px 6px;
 }
 
 .chat__name_left {
